[tool.pytest.ini_options]
addopts = "-p no:faulthandler --cov --cov-report term-missing"
pythonpath = "."

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "pyperclip",
    "pywin32; platform_system=='Windows'",
]

[project.scripts]
titr = "titr:titr:main"
