[metadata]
name = titr
version = 0.0.1
author = Blair Frandeen
author_email = blairfrandeen@gmail.com
description = A CLI for time tracking
long_description = file: README.mde
long_description_content_type = text/markdown
url = https://github.com/blairfrandeen/titr
project_urls =
    Bug Tracker = https://github.com/blairfrandeen/titr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
package = find:
python_requires = >=3.10

[options.packages.find]
where = src
