[metadata]
name = titr
version = attr: titr.__version__
author = Blair Frandeen
author_email = blairfrandeen@gmail.com
description = A CLI for time tracking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blairfrandeen/titr
project_urls =
    Bug Tracker = https://github.com/blairfrandeen/titr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pyperclip
    pywin32;platform_system=='Windows'
    colorama

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    titr = titr:titr_main.main

[semantic_release]
version_variable = src/titr/__init__.py:__version__
repository_url = https://pypi.org/project/titr/
build_command = python3 -m build

[mypy]
ignore_missing_imports = True
exclude = outlook.py

[flake8]
max-line-length = 88
